package bullet;

/** @Author
  *   hitsz
  */
class EnemyBullet(
    locationX: Int,
    locationY: Int,
    speedX: Int,
    speedY: Int,
    power: Int
) extends AbstractBullet(locationX, locationY, speedX, speedY, power) {}
